.hack/argocd-bootstrap/gke-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "argocd-ip-address"
    networking.gke.io/managed-certificates: "argocd-certificate"
    # kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: "argocd-frontend-config"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    - host: "ARGOCD_SUBDOMAIN.ARGOCD_DOMAIN"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port: 
                  number: 80
